# Theatrum

./: README.md  pyproject.toml
docs/: ANNOUNCEMENT.md  PROJECT_ANCHOR.md  USAGE.md  V1_MASTER_PLAN.md
examples/: README.md  demo.sh
examples/demo-vault/: MAP.md
examples/demo-vault/.obsidian/: core-plugins.json  graph.json  workspace.json
examples/demo-vault/global/: 20260711-prefer-uv-over-pip.md  20260711-沟通用中文-代码用英文.md
examples/demo-vault/projects/github.com/acme/mobile/: 20260711-gradle-cache-corruption.md
examples/demo-vault/projects/github.com/acme/webapp/: 20260711-argparse-over-click.md  20260711-flaky-test-tz-naive-datetime.md  20260711-fts5-trigram-vs-jieba-for-cjk.md  20260711-postgres-pool-exhaustion-was-a-leak.md  20260711-three-rules-for-debugging-the-webapp.md  20260711-webapp-project-map.md
tests/: test_golden.py  test_mcp_server.py  test_sync.py
theatrum/: __init__.py  cli.py  connect.py  core.py  importer.py  index.py  server.py  sync.py
